# voxelcraft

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yaml
client/: Cargo.toml
client/examples/: simple.rs
client/src/: application_event_handler.rs  context.rs  lib.rs  setup_voxelcraft.rs
client/src/chunk/: chunk_mesh.rs  create_down_faces.rs  create_east_faces.rs  create_north_faces.rs  create_south_faces.rs  create_up_faces.rs  create_west_faces.rs  mod.rs
client/src/game/: game.rs  game_manager.rs  local_game.rs  mod.rs
client/src/game/resources/: construct_block_pipeline.rs  game_resources.rs  mod.rs
client/src/game/shaders/: block_shader.wgsl
client/src/gpu/: depth_texture.rs  mod.rs
client/src/gpu/primitives/: mod.rs  small_textured_array_vertex.rs  textured_vertex.rs
client/src/input/: input_config.rs  input_manager.rs  mod.rs  user_action.rs  user_action_state.rs
client/src/interface/: message.rs  router.rs
client/src/interface/pages/: get_default_pages.rs  in_game_hud_page.rs  main_page.rs
client/src/primitives/: point_2d.rs  size.rs
client/src/window/: clipboard.rs  convert_window_event.rs  event_handler.rs  mod.rs  window.rs
core/: Cargo.toml
core/benches/: chunk_benchmarks.rs
core/src/: lib.rs
core/src/block/: block_map.rs  block_offset.rs  block_position.rs  mod.rs
core/src/chunk/: chunk.rs  chunk_position.rs  mod.rs
core/src/entity/: entity_offset.rs  entity_position.rs  mod.rs
libs/block_chunk/: Cargo.toml
libs/block_chunk/benches/: chunk.rs  meshable_chunk.rs
libs/block_chunk/src/: block_offset.rs  chunk.rs  chunk_cache.rs  chunk_factory.rs  chunk_storage.rs  lib.rs
libs/block_chunk/src/mesh/: block_descriptor.rs  corner.rs  face.rs  face_direction.rs  mesh_result.rs  meshable_chunk.rs  mod.rs
libs/block_chunk/src/mesh/internal/: fast_mesh.rs  greedy_mesh.rs  handle_block.rs  handle_face.rs  join_faces.rs  merge_face.rs  mod.rs  push_face.rs  should_create_face.rs
libs/block_chunk/src/mesh/internal/fast_mesh/: fast_mesh.rs  handle_block.rs  handle_face.rs  mod.rs  push_face.rs
libs/block_chunk/src/mesh/internal/greedy_mesh/: greedy_mesh.rs  merge_face.rs  mod.rs  should_create_face.rs
libs/camera/: Cargo.toml
libs/camera/src/: fps_camera.rs  lib.rs
libs/face_texture_map/: Cargo.toml  build.rs
libs/face_texture_map/src/: face_texture_map.rs  face_texture_map_builder.rs  lib.rs
libs/id/: Cargo.toml
libs/id/src/: block_id.rs  dimension_id.rs  face_id.rs  lib.rs  mod_id.rs
libs/id_macros/: Cargo.toml
libs/id_macros/src/: lib.rs
libs/layered_world_generator/: Cargo.toml
libs/layered_world_generator/src/: layer.rs  layered_world_generator.rs  lib.rs
libs/layered_world_generator/src/builtin_layers/: height_layer.rs  mod.rs
libs/layered_world_generator/src/builtin_layers/biomes/: biome_center_point.rs  biome_data.rs  biomes_layer.rs  mod.rs
libs/wgpu_async_utils/: Cargo.toml
libs/wgpu_async_utils/src/: lib.rs
mods/over_world_dimension/: Cargo.toml
mods/over_world_dimension/src/: lib.rs  over_world_dimension.rs  over_world_dimension_mod.rs
mods/standard_blocks/: Cargo.toml  build.rs
mods/standard_blocks/src/: lib.rs  module.rs
mods/standard_blocks/src/blocks/: dirt.rs  mod.rs  stone.rs
mods/test/: Cargo.toml
packs/test/: Cargo.toml
packs/test/ios/: .gitignore  build_rust_deps.sh  project.yml
packs/test/ios/src/: bindings.h  main.m
packs/test/src/: lib.rs
server/: Cargo.toml
server/src/: chunk.rs  lib.rs
server/src/block/: block.rs
server/src/client/: client.rs
server/src/entity/: player.rs
server/src/event/: world_event.rs
server/src/local/: local_client.rs  mod.rs  start_local_world.rs
server/src/storage/: file_storage.rs  mod.rs  storage.rs
server/src/world/: dimension_map.rs  mod.rs  world.rs
voxelcraft_client/: Cargo.toml
voxelcraft_client/examples/: simple.rs
voxelcraft_client/src/: application_event_handler.rs  context.rs  lib.rs  setup_voxelcraft.rs
voxelcraft_client/src/block/: block_chunk.rs  block_descriptor.rs  chunk.rs  chunk_map.rs  chunk_position.rs  mod.rs
voxelcraft_client/src/chunk/: chunk_mesh.rs  create_down_faces.rs  create_east_faces.rs  create_north_faces.rs  create_south_faces.rs  create_up_faces.rs  create_west_faces.rs  meshable_chunk.rs  mod.rs
voxelcraft_client/src/game/: block_texture_map.rs  camera_pipeline_utils.rs  game.rs  game_manager.rs  local_game.rs  mod.rs
voxelcraft_client/src/game/resources/: game_resources.rs
voxelcraft_client/src/gpu/: gpu.rs  mod.rs  render_context.rs  shader.wgsl  texture.rs
voxelcraft_client/src/gpu/camera/: camera.rs  camera_uniform.rs  mod.rs  projection.rs
voxelcraft_client/src/gpu/primitives/: mod.rs  textured_array_vertex.rs  textured_vertex.rs
voxelcraft_client/src/input/: input_manager.rs  mod.rs
voxelcraft_client/src/interface/: debug_info.rs  interface.rs  interface.wgsl  message.rs  mod.rs  page.rs  pipeline_map.rs  router.rs  router_flags.rs  screen.rs  screen_context.rs  texture_map.rs
voxelcraft_client/src/interface/components/: button.rs  mod.rs
voxelcraft_client/src/interface/components/styles/: button_style.rs  mod.rs
voxelcraft_client/src/interface/pages/: game_loading_page.rs  get_default_pages.rs  home_page.rs  in_game_hud_page.rs  in_game_menu.rs  main_page.rs  mod.rs  options_page.rs  page.rs  world_selection_page.rs
voxelcraft_client/src/interface/widget/: button_widget.rs  image_widget.rs  mod.rs  text_widget.rs  widget.rs
voxelcraft_client/src/primitives/: mod.rs  point_2d.rs  size.rs
voxelcraft_client/src/window/: clipboard.rs  convert_window_event.rs  event_handler.rs  mod.rs  window.rs
voxelcraft_mod/: Cargo.toml
voxelcraft_mod/src/: dimension.rs  face_id.rs  lib.rs  mod_id.rs  mod_pack.rs  module.rs  world_generator.rs
voxelcraft_mod/src/block/: block.rs
voxelcraft_mod/src/entity/: entity.rs  item.rs  living_entity.rs  mod.rs
voxelcraft_mod/src/world_generator/: mod.rs  world_generator.rs
voxelcraft_server/: Cargo.toml
voxelcraft_server/src/: chunk.rs  lib.rs
(+36 files in other folders)
