[package]
name = "voxelcraft_client"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
image = "0.24"
winit = "0.26"
window_clipboard = "0.2.2"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
wgpu_tokio = "0.12"
pollster = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
wgpu_glyph = "0.16.0"
futures = "0.3.21"
voxelcraft_server = { path = "../server" }
async-trait = "0.1.52"
bytemuck = "1.7.3"
simplelog = "0.11.2"
voxelcraft_mod = { path = "../voxelcraft_mod" }
iced = { git = "https://github.com/iced-rs/iced.git" }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git" }
iced_native = { git = "https://github.com/iced-rs/iced.git" }
mockall = "0.11.0"
uuid = "0.8"
voxelcraft_core = { path = "../core" }
smallvec = "1.8.0"
num_cpus = "1.13.1"
block_chunk = { path = "../libs/block_chunk" }
wgpu_async_utils = { path = "../libs/wgpu_async_utils" }
face_texture_map = { path = "../libs/face_texture_map" }
camera = { path = "../libs/camera" }
serde = { version = "1.0", features = ["serde_derive"] }
voxelcraft_id = { path = "../libs/id" }

[dev-dependencies]
packs_test = {path = "../packs/test"}
