[package]
name = "voxelcraft_core"
version = "0.0.1"
edition = "2021"
resolver = "2"

[[bench]]
name = "chunk_benchmarks"
harness = false

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = { version = "2.0.0-beta.3", features = ["serde"] }

[dev-dependencies]
flate2 = "1.0.22"
criterion = "0.3.5"