[package]
name = "voxelcraft_client"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
image = "0.24"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
wgpu_glyph = "0.16.0"
futures = "0.3.21"
voxelcraft_server = { path = "../voxelcraft_server" }
async-trait = "0.1.52"
bytemuck = "1.7.3"
simplelog = "0.11.2"
voxelcraft_mod = { path = "../voxelcraft_mod" }
iced = { git = "https://github.com/iced-rs/iced.git" }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git" }

[dev-dependencies]
packs_test = {path = "../packs/test"}