[package]
name = "voxelcraft_mod"
version = "0.0.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.52"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.21"
voxelcraft_core = { path = "../core" }
block_chunk = { path = "../libs/block_chunk" }
voxelcraft_id = { path = "../libs/id" }
serde = { version = "1.0", features = ["serde_derive"] }
mipmap = { git = "https://github.com/Joatin/mipmap" }