[package]
name = "voxelcraft_layered_world_generator"
version = "0.0.1"
edition = "2021"

[dependencies]
voxelcraft_mod = { path = "../../voxelcraft_mod" }
voxelcraft_core = { path = "../../core" }
voxelcraft_id = { path = "../id" }
block_chunk = { path = "../block_chunk" }
async-trait = "0.1"
noise = "0.7"
uuid = "0.8"
rand_chacha = "0.3.1"